Fixed Nav Slider logo click conflicts on small divices

--- a/stylesheets/screen-old.css
+++ b/stylesheets/screen-old.css
@@ -234,209 +234,6 @@ Stylesheet: Helpers
   }
 }
 
-/* line 2, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container {
-  width: 31px;
-  position: fixed;
-  margin: auto;
-  top: 40px;
-  right: 4%;
-  z-index: 2000;
-  -webkit-transform: translate3d(0, 0, 2000);
-  -moz-transform: translate3d(0, 0, 2000);
-  -o-transform: translate3d(0, 0, 2000);
-  -ms-transform: translate3d(0, 0, 2000);
-  transform: translate3d(0, 0, 2000);
-  pointer-events: none;
-}
-@media (min-width: 768px) {
-  /* line 2, ../sass/components/_navigation.scss */
-  .c3xgm-about-main-nav-container {
-    width: 25px;
-    top: 208px;
-  }
-}
-@media (min-width: 906px) {
-  /* line 2, ../sass/components/_navigation.scss */
-  .c3xgm-about-main-nav-container {
-    right: 0;
-    left: 0;
-    width: 96%;
-    max-width: 906px;
-  }
-}
-/* line 25, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav {
-  float: right;
-  text-align: center;
-  position: relative;
-  pointer-events: all;
-}
-/* line 31, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-  float: left;
-  clear: left;
-}
-/* line 37, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li a {
-  text-decoration: none;
-}
-/* line 42, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-title {
-  text-transform: uppercase;
-  display: block;
-  padding: 10px 0;
-  background: #ffffff;
-  width: 10.25em;
-  border: 2px solid #b4b8bc;
-  color: #464B51;
-  font-weight: 600;
-  position: absolute;
-  right: 130%;
-  top: -8px;
-  opacity: 0;
-  z-index: 0;
-  -webkit-transition: opacity 200ms;
-  -moz-transition: opacity 200ms;
-  -o-transition: opacity 200ms;
-  -ms-transition: opacity 200ms;
-  transition: opacity 200ms;
-}
-/* line 59, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-title:after, .c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-title:before {
-  left: 100%;
-  top: 50%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-/* line 70, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-title:after {
-  border-color: rgba(136, 183, 213, 0);
-  border-left-color: #ffffff;
-  border-width: 8px;
-  margin-top: -8px;
-}
-/* line 76, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-title:before {
-  border-color: rgba(180, 184, 188, 0);
-  border-left-color: #b4b8bc;
-  border-width: 11px;
-  margin-top: -11px;
-}
-/* line 84, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li .c3xgm-about-nav-hover-sub-title {
-  color: #124e9c;
-}
-/* line 89, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav li > a:hover + .c3xgm-about-nav-hover-title {
-  opacity: 1;
-  z-index: 1;
-  -webkit-transition: opacity 50ms;
-  -moz-transition: opacity 50ms;
-  -o-transition: opacity 50ms;
-  -ms-transition: opacity 50ms;
-  transition: opacity 50ms;
-}
-/* line 96, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-nav-bullet {
-  display: block;
-  background-color: #808285;
-  width: 11px;
-  height: 11px;
-  margin: 10px;
-}
-@media (min-width: 768px) {
-  /* line 96, ../sass/components/_navigation.scss */
-  .c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-nav-bullet {
-    width: 9px;
-    height: 9px;
-    margin: 8px;
-  }
-}
-/* line 107, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-nav-bullet-active {
-  background-color: #FDB12E;
-}
-/* line 110, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub {
-  -webkit-transition: all 200ms;
-  -moz-transition: all 200ms;
-  -o-transition: all 200ms;
-  -ms-transition: all 200ms;
-  transition: all 200ms;
-}
-/* line 113, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub .c3xgm-about-nav-bullet {
-  background-color: #555555;
-}
-/* line 114, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub .c3xgm-about-nav-bullet-active {
-  background-color: #FDB12E;
-}
-/* line 116, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub li {
-  position: relative;
-}
-/* line 117, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub li:after {
-  content: "";
-  display: block;
-  width: 1px;
-  height: 20px;
-  bottom: -10px;
-  background-color: #555555;
-  position: absolute;
-  margin: auto;
-  left: 0;
-  right: 0;
-  z-index: -1;
-}
-@media (min-width: 768px) {
-  /* line 117, ../sass/components/_navigation.scss */
-  .c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub li:after {
-    bottom: -8px;
-    height: 17px;
-  }
-}
-/* line 132, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-container .c3xgm-about-main-nav .c3xgm-about-main-nav-sub li:last-child:after {
-  content: none;
-  display: none;
-}
-
-/* line 137, ../sass/components/_navigation.scss */
-.c3xgm-about-main-nav-sub {
-  opacity: 0;
-  position: absolute;
-  -webkit-transition: all 200ms;
-  -moz-transition: all 200ms;
-  -o-transition: all 200ms;
-  -ms-transition: all 200ms;
-  transition: all 200ms;
-}
-
-/* line 144, ../sass/components/_navigation.scss */
-.c3xgm-about-nav-bullet-active ~ .c3xgm-about-main-nav-sub {
-  opacity: 1;
-}
-/* line 148, ../sass/components/_navigation.scss */
-.c3xgm-about-nav-bullet-active ~ .c3xgm-about-main-nav-sub .c3xgm-about-nav-hover-sub-title:hover {
-  opacity: 1;
-  -webkit-transition: opacity 50ms;
-  -moz-transition: opacity 50ms;
-  -o-transition: opacity 50ms;
-  -ms-transition: opacity 50ms;
-  transition: opacity 50ms;
-}
-
 /* line 3, ../sass/components/_layout.scss */
 *,
 *::before,
